8. Погружение в автоматизацию 22. Автоматизируем сборку личного проекта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
   <title>HTML Academy: Седона</title>
 </head>
 
-<body class="data">
+<body class="data data__catalog">
 
   <!-- Навигационное меню start -->
   <header class="menu">
@@ -337,6 +337,7 @@
             </div>
           </div>
         </div>
+        <span class="materials__player-fix"></span>
       </div>
     </section>
     <!-- «Седона» end -->
