--- a/source/index.html
+++ b/source/index.html
@@ -146,8 +146,8 @@
       <span class="reasons__triangle-top"></span>
       <div class="reasons__block">
         <h1 class="reasons__header">
-          <span>СЕДОНА —</span> небольшой
-          городок в АРИЗОНЕ,
+          <span>СЕДОНА —</span> <span>небольшой</span>
+          <span>городок в АРИЗОНЕ,</span>
           зАСЛУЖИвающий большего!
         </h1>
         <h2 class="reasons__info">
@@ -162,13 +162,13 @@
             <span class="reasons__triangle-bottom"></span>
             <div class="reasons__items-block reasons__items-block-special-one">
               <h3 class="reasons__items-header">
-                НАСТОЯЩИЙ<br class="reasons__items-br"> ГОРОДОК
+                НАСТОЯЩИЙ<br class="reasons__items-br"> <span>ГОРОДОК</span>
               </h3>
               <h4 class="reasons__items-number">
                 — №1 —
               </h4>
               <p class="reasons__items-info">
-                СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ,<br class="reasons__items-br"> ТАМ
+                СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ,<br class="reasons__items-br-p"> ТАМ
                 ТЕЧЕТ СВОЯ ЖИЗНЬ
               </p>
             </div>
@@ -189,7 +189,7 @@
               </div>
               <p class="reasons__itemadd-item-info reasons__itemadd-item-info-home">
                 Рекомендуем пожить в
-                настоящем<br class="reasons__itemadd-item-info-br"> мотеле, все как в
+                настоящем<br class="reasons__itemadd-item-info-br"> <span>мотеле, все как в</span>
                 кино!
               </p>
             </li>
@@ -204,7 +204,7 @@
                 </h4>
               </div>
               <p class="reasons__itemadd-item-info reasons__itemadd-item-info-gift">
-                Не только китайского,<br class="reasons__itemadd-item-info-br"> но и
+                Не только китайского,<br class="reasons__itemadd-item-info-br"> <span>но и</span>
                 местного производства!
               </p>
             </li>
@@ -236,14 +236,15 @@
           <div class="reasons__items-special">
             <div class="reasons__items-block reasons__items-block-inner reasons__items-block-devil">
               <h3 class="reasons__items-header reasons__items-header-devil">
-                ТАМ ЕСТЬ<br class="reasons__items-header-br"> Мост дьявола
+                ТАМ ЕСТЬ<br class="reasons__items-header-br"> <span>Мост дьявола</span>
               </h3>
               <h4 class="reasons__items-number">
                 — №2 —
               </h4>
               <p class="reasons__items-info reasons__items-info-devil">
-                Да, по нему можно пройти!<br class="reasons__items-header-br"> Если вы
-                осмелитесь, конечно
+                Да, по нему можно пройти!<br class="reasons__items-header-br-p"> <span
+                  class="reasons__items-info-devil-span-one">Если вы</span>
+                <span class="reasons__items-info-devil-span-two">осмелитесь, конечно</span>
               </p>
             </div>
           </div>
@@ -257,7 +258,7 @@
         <div class="reasons__items-wrapper-main">
           <div class="reasons__items-block reasons__items-block-add reasons__items-inner-main">
             <h3 class="reasons__items-header reasons__items-header-add reasons__items-block-add-three">
-              НЕБОЛЬШАЯ<br class="reasons__peace-road-people"> ПЛОЩАДЬ
+              НЕБОЛЬШАЯ<br class="reasons__peace-road-people"> <span class="reasons__items-header-span">ПЛОЩАДЬ</span>
             </h3>
             <h4
               class="reasons__items-number reasons__items-number-add reasons__items-block-add-three reasons__items-block-add-three-number">
@@ -266,7 +267,9 @@
             <p
               class="reasons__items-info reasons__items-info-add reasons__items-block-add-three reasons__items-block-add-three-info">
               ВСЕ интересные места находятся
-              очень<br class="reasons__items-block-add-three-info-br"> близко
+              <span class="reasons__items-block-add-three-info-very-one">очень</span> <br
+                class="reasons__items-block-add-three-info-br"> <span
+                class="reasons__items-block-add-three-info-very-two">близко</span>
             </p>
           </div>
         </div>
@@ -277,7 +280,8 @@
           <div class="reasons__items-block reasons__items-block-add reasons__items-inner-main">
             <h3
               class="reasons__items-header reasons__items-header-add reasons__items-block-add-four reasons__items-block-add-four-road">
-              КРАСИВАЯ<br class="reasons__peace-road-people"> ДОРОГА
+              КРАСИВАЯ<br class="reasons__peace-road-people"> <span
+                class="reasons__items-block-add-four-span">ДОРОГА</span>
             </h3>
             <h4
               class="reasons__items-number reasons__items-number-add reasons__items-number-road reasons__items-block-add-four">
@@ -285,8 +289,10 @@
             </h4>
             <p
               class="reasons__items-info reasons__items-info-add reasons__items-info-road reasons__items-block-add-four">
-              ЕХАТЬ В СЕДОНУ ИЗ<br class="reasons__items-info-road-br"> ЛАС-ВЕГАСА
-              совсем <br class="reasons__items-block-add-three-info-br"> НЕ СКУЧНО!
+              ЕХАТЬ В СЕДОНУ ИЗ<br class="reasons__items-info-road-br"> <span
+                class="reasons__items-info-road-span-one">ЛАС-ВЕГАСА</span>
+              <span class="reasons__items-info-road-span-two">совсем <br
+                  class="reasons__items-block-add-three-info-br-road"> НЕ СКУЧНО!</span>
             </p>
           </div>
         </div>
@@ -297,7 +303,8 @@
           <div class="reasons__items-block reasons__items-inner-main">
             <h3
               class="reasons__items-header reasons__items-header-add reasons__items-header-people reasons__items-block-add-five">
-              МАЛО<br class="reasons__peace-road-people"> ТУРИСТОВ
+              МАЛО<br class="reasons__peace-road-people"> <span
+                class="reasons__items-header-people-span">ТУРИСТОВ</span>
             </h3>
             <h4
               class="reasons__items-number reasons__items-number-add reasons__items-number-people reasons__items-block-add-five">
